force-app/main/default/objects/Job_Part_Detail__c/Job_Part_Detail__c.object-meta.xml
<CustomObject>
    <label>Job Part Detail</label>
    <nameField>
        <displayFormat>JP-{000000000}</displayFormat>
        <label>Job Part Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Part Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>