force-app/main/default/objects/Job_Part_Detail__c/fields/Exchange_Part_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Part_Quantity__c</fullName>
    <label>Exchange Part Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>