force-app/main/default/objects/Job_Part_Detail__c/fields/Part_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Part_Receive_Date__c</fullName>
    <label>Part Receive Date</label>
    <type>Date</type>
</CustomField>