force-app/main/default/objects/Job_Part_Detail__c/fields/Payment_Labor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Labor_Amount__c</fullName>
    <label>Payment Labor Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>