force-app/main/default/objects/Job_Part_Detail__c/fields/Payment_Part_Cost__c.field-meta.xml
<CustomField>
    <fullName>Payment_Part_Cost__c</fullName>
    <label>Payment Part Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>