force-app/main/default/objects/Job_Part_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Job Part Details</relationshipLabel>
    <relationshipName>Job_Part_Details</relationshipName>
    <type>Lookup</type>
</CustomField>