force-app/main/default/objects/Job_Part_Detail__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Job Part Details</relationshipLabel>
    <relationshipName>Job_Part_Details</relationshipName>
    <type>Lookup</type>
</CustomField>