force-app/main/default/objects/Job_Part_Detail__c/fields/SupplyPart_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SupplyPart_Quantity__c</fullName>
    <label>Supply Part Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>