force-app/main/default/objects/Job_Part_Detail__c/recordTypes/Job.recordType-meta.xml
<RecordType>
    <fullName>Job</fullName>
    <active>true</active>
    <label>Job</label>
</RecordType>